# pmake

./: .gitignore  CMakeLists.txt  README.md  builder.py  cmaker.py  cpp.py  cpp_old.py  hello.cpp  hello.hpp  make.py  setup.py
examples/: make.py
pmake/: __init__.py  cmaker.py  cpp.py
sub/: make.py
