cmake_minimum_required(VERSION 3.10)
project(hello)
set(CMAKE_INSTALL_RPATH "libtorch/lib")
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")

if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
    message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
    file(DOWNLOAD "https://raw.githubusercontent.com/opendocument-app/OpenDocument.core/main/cmake/conan.cmake"
                    "${CMAKE_BINARY_DIR}/conan.cmake"
                    TLS_VERIFY ON)
endif()
include(${CMAKE_BINARY_DIR}/conan.cmake)
conan_cmake_run(REQUIRES nlohmann_json/3.11.2 BASIC_SETUP CMAKE_TARGETS BUILD missing)
list(APPEND CMAKE_PREFIX_PATH libtorch)
find_package(Torch  REQUIRED)
add_executable(hello.out)
target_sources(hello.out PUBLIC hello.cpp)
target_include_directories(hello.out PUBLIC .)
target_compile_options(hello.out PUBLIC -Wall -Werror)
target_link_directories(hello.out PUBLIC /usr/lib)
target_compile_definitions(hello.out PUBLIC TEST)
add_library(test SHARED)
target_sources(test PUBLIC test.cpp)
add_library(testa STATIC)
target_sources(testa PUBLIC test.cpp)
